--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1 {
   align-items: center;
   justify-content: center;
   color: white;
-  font-size: 100%;
+  font-size: 22px;
+  font-weight: bold;
   margin: 50px auto;
 }
